--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/static/images/favicon.ico" type="image/murf-icon">
   <link rel="stylesheet" href="/static/css/style.css">
-  <title>Murf AI Voice Agent - Day 6</title>
+  <title>Murf AI Voice Agent - Day 7</title>
   <style>
     .record-icon {
       color: red;
@@ -34,7 +34,7 @@
       <p id="status"></p>
 
       <div id="echo-bot">
-        <h1>Echo Bot</h1>
+        <h1>Echo Bot - V2</h1>
         <button id="toggleRecording"><span class="record-icon" id="recordDot">●</span> Start Recording</button>
         <button id="pauseRecording">Pause</button><br><br>
         <audio id="echoAudio" controls></audio>
